added inline documents to usermanager

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+SDKNotes.md
+encodings.xml
+
 # Built application files
 *.apk
 *.ap_
@@ -37,7 +48,6 @@ captures/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
-.idea/dictionaries
 .idea/libraries
 
 # Keystore files
@@ -46,6 +56,8 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
+# Google Services (e.g. APIs or Firebase)
+google-services.json
 
 # Freeline
 freeline.py
