--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   compile 'com.android.support:appcompat-v7:27.+'
   testCompile 'junit:junit:4.12'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile project(':core')
 }
 repositories {
   mavenCentral()
