--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.0.1"
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
