--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
   ext.kotlin_version = '1.2.21'
   repositories {
     jcenter()
+    maven { url 'https://maven.google.com' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.0.1"
+    classpath 'com.android.tools.build:gradle:3.1.2'
+    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.1.1"
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
