--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
   // RxJava/RxAndroid
-  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  compile 'io.reactivex.rxjava2:rxjava:2.1.6'
-  compile project(path: ':core')
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
+  implementation project(path: ':core')
 }
