--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'maven-publish'
 
@@ -29,9 +30,9 @@ dependencies {
   androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  implementation 'com.android.support:appcompat-v7:27.+'
+  implementation 'com.android.support:appcompat-v7:27.1.1'
   testImplementation 'junit:junit:4.12'
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
   mavenCentral()
@@ -39,7 +40,7 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'core'
-def libraryVersion = '0.5.1'
+def libraryVersion = '0.5.3'
 
 publishing {
   publications {
@@ -57,14 +58,13 @@ artifactory {
   contextUrl = 'https://maven.blockv.io/artifactory'
   publish {
     repository {
-      repoKey = 'BLOCKv'
+      repoKey = 'BLOCKv-debug'
       username = blockv_artifactory_username
       password = blockv_artifactory_password
     }
     defaults {
       publications('aar')
       publishArtifacts = true
-
       properties = ['qa.level': 'basic', 'q.os': 'android', 'dev.team': 'core']
       publishPom = true
     }
