--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.jfrog.artifactory'
+apply plugin: 'maven-publish'
 
 android {
   compileSdkVersion 27
@@ -19,6 +22,7 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+
   }
 }
 
@@ -26,9 +30,43 @@ dependencies {
   // RxJava/RxAndroid
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
   implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
-  implementation project(path: ':core')
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+  implementation project(':core')
 }
 repositories {
   mavenCentral()
+}
+
+def libraryGroupId = 'io.blockv.sdk'
+def libraryArtifactId = 'rx'
+def libraryVersion = '0.5.3'
+
+publishing {
+  publications {
+    aar(MavenPublication) {
+      groupId libraryGroupId
+      version libraryVersion
+      artifactId libraryArtifactId
+
+      artifact("$buildDir/outputs/aar/${artifactId}-release.aar")
+    }
+  }
+}
+
+artifactory {
+  contextUrl = 'https://maven.blockv.io/artifactory'
+  publish {
+    repository {
+      repoKey = 'BLOCKv-debug'
+      username = blockv_artifactory_username
+      password = blockv_artifactory_password
+    }
+    defaults {
+      publications('aar')
+      publishArtifacts = true
+      properties = ['qa.level': 'basic', 'q.os': 'android', 'dev.team': 'core']
+      publishPom = true
+    }
+  }
 }
