--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -30,7 +30,7 @@ dependencies {
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
   implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+  implementation 'com.neovisionaries:nv-websocket-client:2.5'
   implementation project(':core')
 }
 repositories {
@@ -39,14 +39,12 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'rx'
-def libraryVersion = '0.5.3'
+def libraryVersion = '1.0.0'
 
-//Add this back in when repo is open source
-//
-//task sourceJar(type: Jar) {
-//  from android.sourceSets.main.java.srcDirs
-//  classifier "sources"
-//}
+task sourceJar(type: Jar) {
+  from android.sourceSets.main.java.srcDirs
+  classifier "sources"
+}
 
 publishing {
   publications {
@@ -54,13 +52,13 @@ publishing {
       groupId libraryGroupId
       artifactId libraryArtifactId
       version libraryVersion
-      //artifact(sourceJar)
+      artifact(sourceJar)
       artifact("$buildDir/outputs/aar/${artifactId}-release.aar")
     }
   }
   repositories {
     maven {
-      url "https://maven.blockv.io/artifactory/Blockv-Debug/"
+      url "https://maven.blockv.io/artifactory/BLOCKv/"
       credentials {
         username = "${blockv_artifactory_username}"
         password = "${blockv_artifactory_password}"
