--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
           package="io.blockv.core"
 >
-
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application android:allowBackup="true"
                android:label="@string/app_name"
                android:supportsRtl="true"
