add dependencies for tests

--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -16,6 +16,9 @@ android {
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
   }
+  testOptions {
+    execution 'ANDROID_TEST_ORCHESTRATOR'
+  }
   buildTypes {
     release {
       minifyEnabled false
@@ -32,6 +35,11 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
   implementation project(':core')
+
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
 }
 repositories {
   mavenCentral()
