--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
   compileSdkVersion 27
@@ -27,6 +28,7 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:27.+'
   testImplementation 'junit:junit:4.12'
   implementation project(':core')
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
   mavenCentral()
