--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -31,7 +31,7 @@ dependencies {
   implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
-  implementation project(':core')
+  implementation project(':common')
 }
 repositories {
   mavenCentral()
