--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.neovisionaries:nv-websocket-client:2.5'
 
   implementation 'com.android.support:appcompat-v7:27.1.1'
   testImplementation 'junit:junit:4.12'
