--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,6 +34,7 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation project(':common')
+  implementation project(':face')
 }
 repositories {
   mavenCentral()
