--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation project(':common')
   implementation project(':face')
+  implementation project(':faceview')
 }
 repositories {
   mavenCentral()
