--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ allprojects {
     maven {
       url "https://maven.google.com"
     }
+    maven {
+      url "https://maven.blockv.io/artifactory/BLOCKv"
+    }
   }
 }
 
