--- a/core/build.gradle
+++ b/core/build.gradle
@@ -66,7 +66,7 @@ publishing {
         def common = dependenciesNode.appendNode('dependency')
         common.appendNode('groupId', 'io.blockv.sdk')
         common.appendNode('artifactId', 'common')
-        common.appendNode('version', '1.0.0')
+        common.appendNode('version', '[1.1.0,2.0.0)')
       }
 
     }
