--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   testImplementation 'junit:junit:4.12'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation ("io.blockv.faces:image-face:1.0.4")
   implementation ("io.blockv.faces:progress-image-face:1.0.0")
   implementation project(':common')
