--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,8 +28,10 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
-
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation 'com.android.support:appcompat-v7:27.1.1'
+
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.github.cbismuth:junit-repeat-rule:1.1.2'
   testImplementation 'org.json:json:20140107'
@@ -39,7 +41,7 @@ dependencies {
   testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
 
 }
 repositories {
@@ -62,6 +64,22 @@ publishing {
       version libraryVersion
       artifact(sourceJar)
       artifact("$buildDir/outputs/aar/${artifactId}-release.aar")
+
+      pom.withXml {
+        def dependenciesNode = asNode().appendNode('dependencies')
+        def kotlin = dependenciesNode.appendNode('dependency')
+        kotlin.appendNode('groupId', 'org.jetbrains.kotlin')
+        kotlin.appendNode('artifactId', 'kotlin-stdlib-jdk7')
+        kotlin.appendNode('version', '[1.2.61,2.0.0)')
+        def reflect = dependenciesNode.appendNode('dependency')
+        reflect.appendNode('groupId', 'org.jetbrains.kotlin')
+        reflect.appendNode('artifactId', 'kotlin-reflect')
+        reflect.appendNode('version', '[1.2.61,2.0.0)')
+        def websocket = dependenciesNode.appendNode('dependency')
+        websocket.appendNode('groupId', 'com.neovisionaries')
+        websocket.appendNode('artifactId', 'nv-websocket-client')
+        websocket.appendNode('version', '2.5')
+      }
     }
   }
   repositories {
