--- a/face/build.gradle
+++ b/face/build.gradle
@@ -26,25 +26,24 @@ android {
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.android.support:appcompat-v7:27.1.1'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation project(':common')
   implementation project(':faceview')
   implementation ("io.blockv.faces:image-face:1.0.4")
-  implementation ("io.blockv.faces:progress-image-face:1.0.0")
+  implementation ("io.blockv.faces:progress-image-face:1.0.2")
+
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
 repositories {
   mavenCentral()
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'face'
-def libraryVersion = '1.1.0'
+def libraryVersion = '1.1.1'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -64,11 +63,15 @@ publishing {
         def commonDependency = dependenciesNode.appendNode('dependency')
         commonDependency.appendNode('groupId', 'io.blockv.sdk')
         commonDependency.appendNode('artifactId', 'common')
-        commonDependency.appendNode('version', '[1.1.0,2.0.0)')
+        commonDependency.appendNode('version', '[1.1.1,2.0.0)')
+        def coreDependency = dependenciesNode.appendNode('dependency')
+        coreDependency.appendNode('groupId', 'io.blockv.sdk')
+        coreDependency.appendNode('artifactId', 'core')
+        coreDependency.appendNode('version', '[2.1.1,3.0.0)')
         def faceviewDependency = dependenciesNode.appendNode('dependency')
         faceviewDependency.appendNode('groupId', 'io.blockv.sdk')
         faceviewDependency.appendNode('artifactId', 'faceview')
-        faceviewDependency.appendNode('version', '[1.0.0,2.0.0)')
+        faceviewDependency.appendNode('version', '[2.0.0,3.0.0)')
         def imageFaceDependency = dependenciesNode.appendNode('dependency')
         imageFaceDependency.appendNode('groupId', 'io.blockv.faces')
         imageFaceDependency.appendNode('artifactId', 'image-face')
@@ -76,7 +79,7 @@ publishing {
         def progressFaceDependency = dependenciesNode.appendNode('dependency')
         progressFaceDependency.appendNode('groupId', 'io.blockv.faces')
         progressFaceDependency.appendNode('artifactId', 'progress-image-face')
-        progressFaceDependency.appendNode('version', '[1.0.0,2.0.0)')
+        progressFaceDependency.appendNode('version', '[1.0.2,2.0.0)')
       }
     }
   }
