--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,8 +34,9 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  implementation ("io.blockv.faces:image-face:1.0.4")
-  implementation ("io.blockv.faces:progress-image-face:1.0.2")
+  implementation ("io.blockv.faces:image-face:2.0.0")
+  implementation ("io.blockv.faces:image-progress-face:2.0.0")
+  implementation ("io.blockv.faces:image-policy-face:1.0.0")
   implementation project(':common')
   implementation project(':face')
   implementation project(':faceview')
