--- a/face/build.gradle
+++ b/face/build.gradle
@@ -30,8 +30,9 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation project(':common')
   implementation project(':faceview')
-  implementation ("io.blockv.faces:image-face:1.0.4")
-  implementation ("io.blockv.faces:progress-image-face:1.0.2")
+  implementation ("io.blockv.faces:image-face:2.0.0")
+  implementation ("io.blockv.faces:image-progress-face:2.0.0")
+  implementation ("io.blockv.faces:image-policy-face:1.0.0")
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -75,11 +76,15 @@ publishing {
         def imageFaceDependency = dependenciesNode.appendNode('dependency')
         imageFaceDependency.appendNode('groupId', 'io.blockv.faces')
         imageFaceDependency.appendNode('artifactId', 'image-face')
-        imageFaceDependency.appendNode('version', '[1.0.4,2.0.0)')
+        imageFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
         def progressFaceDependency = dependenciesNode.appendNode('dependency')
         progressFaceDependency.appendNode('groupId', 'io.blockv.faces')
-        progressFaceDependency.appendNode('artifactId', 'progress-image-face')
-        progressFaceDependency.appendNode('version', '[1.0.2,2.0.0)')
+        progressFaceDependency.appendNode('artifactId', 'image-progress-face')
+        progressFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        def policyFaceDependency = dependenciesNode.appendNode('dependency')
+        policyFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        policyFaceDependency.appendNode('artifactId', 'image-policys-face')
+        policyFaceDependency.appendNode('version', '[1.0.0,2.0.0)')
       }
     }
   }
