--- a/rxcore/build.gradle
+++ b/rxcore/build.gradle
@@ -32,8 +32,9 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
-  implementation("io.blockv.faces:image-face:1.0.4")
-  implementation("io.blockv.faces:progress-image-face:1.0.2")
+  implementation ("io.blockv.faces:image-face:2.0.0")
+  implementation ("io.blockv.faces:image-progress-face:2.0.0")
+  implementation ("io.blockv.faces:image-policy-face:1.0.0")
   implementation project(':common')
   implementation project(':face')
   implementation project(':rxface')
