--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,9 +34,22 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  implementation ("io.blockv.faces:image-face:2.0.0")
-  implementation ("io.blockv.faces:image-progress-face:2.0.1")
-  implementation ("io.blockv.faces:image-policy-face:1.0.1")
+  implementation("io.blockv.faces:image-face:2.0.1")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
+  implementation("io.blockv.faces:image-progress-face:2.0.2")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
+  implementation("io.blockv.faces:image-policy-face:1.0.2")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
+  implementation("io.blockv.faces:image-layered-face:1.0.1")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
   implementation project(':common')
   implementation project(':face')
   implementation project(':faceview')
@@ -47,7 +60,7 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'core'
-def libraryVersion = '2.2.0'
+def libraryVersion = '2.3.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -68,7 +81,7 @@ publishing {
         def common = dependenciesNode.appendNode('dependency')
         common.appendNode('groupId', 'io.blockv.sdk')
         common.appendNode('artifactId', 'common')
-        common.appendNode('version', '[1.1.1,2.0.0)')
+        common.appendNode('version', '[1.3.1,2.0.0)')
       }
 
     }
