--- a/rxcore/build.gradle
+++ b/rxcore/build.gradle
@@ -32,9 +32,22 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
-  implementation ("io.blockv.faces:image-face:2.0.0")
-  implementation ("io.blockv.faces:image-progress-face:2.0.1")
-  implementation ("io.blockv.faces:image-policy-face:1.0.1")
+  implementation("io.blockv.faces:image-face:2.0.1")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
+  implementation("io.blockv.faces:image-progress-face:2.0.2")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
+  implementation("io.blockv.faces:image-policy-face:1.0.2")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
+  implementation("io.blockv.faces:image-layered-face:1.0.1")
+    {
+      exclude group: 'io.blockv.sdk'
+    }
   implementation project(':common')
   implementation project(':face')
   implementation project(':rxface')
@@ -46,7 +59,7 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'rxcore'
-def libraryVersion = '2.2.0'
+def libraryVersion = '2.3.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -66,7 +79,7 @@ publishing {
         def dependencyNode = dependenciesNode.appendNode('dependency')
         dependencyNode.appendNode('groupId', 'io.blockv.sdk')
         dependencyNode.appendNode('artifactId', 'common')
-        dependencyNode.appendNode('version', '[1.1.1,2.0.0)')
+        dependencyNode.appendNode('version', '[1.3.1,2.0.0)')
         def rxjava = dependenciesNode.appendNode('dependency')
         rxjava.appendNode('groupId', 'io.reactivex.rxjava2')
         rxjava.appendNode('artifactId', 'rxjava')
