--- a/rxface/build.gradle
+++ b/rxface/build.gradle
@@ -33,9 +33,6 @@ dependencies {
   implementation project(':common')
   implementation project(':faceview')
   implementation project(':face')
-  implementation ("io.blockv.faces:image-face:2.0.0")
-  implementation ("io.blockv.faces:image-progress-face:2.0.1")
-  implementation ("io.blockv.faces:image-policy-face:1.0.1")
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -47,7 +44,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'rxface'
-def libraryVersion = '2.1.2'
+def libraryVersion = '2.2.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -67,27 +64,31 @@ publishing {
         def commonDependency = dependenciesNode.appendNode('dependency')
         commonDependency.appendNode('groupId', 'io.blockv.sdk')
         commonDependency.appendNode('artifactId', 'common')
-        commonDependency.appendNode('version', '[1.1.1,2.0.0)')
+        commonDependency.appendNode('version', '[1.3.1,2.0.0)')
         def coreDependency = dependenciesNode.appendNode('dependency')
         coreDependency.appendNode('groupId', 'io.blockv.sdk')
         coreDependency.appendNode('artifactId', 'rxcore')
-        coreDependency.appendNode('version', '[2.2.0,3.0.0)')
+        coreDependency.appendNode('version', '[2.3.0,3.0.0)')
         def faceviewDependency = dependenciesNode.appendNode('dependency')
         faceviewDependency.appendNode('groupId', 'io.blockv.sdk')
         faceviewDependency.appendNode('artifactId', 'faceview')
-        faceviewDependency.appendNode('version', '[2.0.0,3.0.0)')
+        faceviewDependency.appendNode('version', '[2.0.1,3.0.0)')
         def imageFaceDependency = dependenciesNode.appendNode('dependency')
         imageFaceDependency.appendNode('groupId', 'io.blockv.faces')
         imageFaceDependency.appendNode('artifactId', 'image-face')
-        imageFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        imageFaceDependency.appendNode('version', '[2.0.1,3.0.0)')
         def progressFaceDependency = dependenciesNode.appendNode('dependency')
         progressFaceDependency.appendNode('groupId', 'io.blockv.faces')
         progressFaceDependency.appendNode('artifactId', 'image-progress-face')
-        progressFaceDependency.appendNode('version', '[2.0.1,3.0.0)')
+        progressFaceDependency.appendNode('version', '[2.0.2,3.0.0)')
         def policyFaceDependency = dependenciesNode.appendNode('dependency')
         policyFaceDependency.appendNode('groupId', 'io.blockv.faces')
         policyFaceDependency.appendNode('artifactId', 'image-policy-face')
-        policyFaceDependency.appendNode('version', '[1.0.1,2.0.0)')
+        policyFaceDependency.appendNode('version', '[1.0.2,2.0.0)')
+        def layerFaceDependency = dependenciesNode.appendNode('dependency')
+        layerFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        layerFaceDependency.appendNode('artifactId', 'image-layered-face')
+        layerFaceDependency.appendNode('version', '[1.0.1,2.0.0)')
       }
     }
   }
