--- a/common/build.gradle
+++ b/common/build.gradle
@@ -47,7 +47,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'common'
-def libraryVersion = '1.3.2'
+def libraryVersion = '2.0.0-alpha.3'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
