--- a/rxcore/build.gradle
+++ b/rxcore/build.gradle
@@ -59,7 +59,7 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'rxcore'
-def libraryVersion = '2.3.0'
+def libraryVersion = '3.0.0-alpha.1'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -79,7 +79,7 @@ publishing {
         def dependencyNode = dependenciesNode.appendNode('dependency')
         dependencyNode.appendNode('groupId', 'io.blockv.sdk')
         dependencyNode.appendNode('artifactId', 'common')
-        dependencyNode.appendNode('version', '[1.3.1,2.0.0)')
+        dependencyNode.appendNode('version', '[2.0.0-alpha.3,3.0.0)')
         def rxjava = dependenciesNode.appendNode('dependency')
         rxjava.appendNode('groupId', 'io.reactivex.rxjava2')
         rxjava.appendNode('artifactId', 'rxjava')
