--- a/face/build.gradle
+++ b/face/build.gradle
@@ -41,7 +41,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'face'
-def libraryVersion = '3.0.0-alpha.1'
+def libraryVersion = '3.0.0-alpha.2'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -65,27 +65,27 @@ publishing {
         def coreDependency = dependenciesNode.appendNode('dependency')
         coreDependency.appendNode('groupId', 'io.blockv.sdk')
         coreDependency.appendNode('artifactId', 'core')
-        coreDependency.appendNode('version', '[3.0.0-alpha.2,4.0.0)')
+        coreDependency.appendNode('version', '[3.0.0-alpha.3,4.0.0)')
         def faceviewDependency = dependenciesNode.appendNode('dependency')
         faceviewDependency.appendNode('groupId', 'io.blockv.sdk')
         faceviewDependency.appendNode('artifactId', 'faceview')
-        faceviewDependency.appendNode('version', '[3.0.0-alpha.1,4.0.0)')
+        faceviewDependency.appendNode('version', '[3.0.0-alpha.2,4.0.0)')
         def imageFaceDependency = dependenciesNode.appendNode('dependency')
         imageFaceDependency.appendNode('groupId', 'io.blockv.faces')
         imageFaceDependency.appendNode('artifactId', 'image-face')
-        imageFaceDependency.appendNode('version', '[2.0.1,3.0.0)')
+        imageFaceDependency.appendNode('version', '[3.0.0-alpha.1,4.0.0)')
         def progressFaceDependency = dependenciesNode.appendNode('dependency')
         progressFaceDependency.appendNode('groupId', 'io.blockv.faces')
         progressFaceDependency.appendNode('artifactId', 'image-progress-face')
-        progressFaceDependency.appendNode('version', '[2.0.2,3.0.0)')
+        progressFaceDependency.appendNode('version', '[3.0.0-alpha.1,4.0.0)')
         def policyFaceDependency = dependenciesNode.appendNode('dependency')
         policyFaceDependency.appendNode('groupId', 'io.blockv.faces')
         policyFaceDependency.appendNode('artifactId', 'image-policy-face')
-        policyFaceDependency.appendNode('version', '[1.0.2,2.0.0)')
+        policyFaceDependency.appendNode('version', '[2.0.0-alpha.1,3.0.0)')
         def layerFaceDependency = dependenciesNode.appendNode('dependency')
         layerFaceDependency.appendNode('groupId', 'io.blockv.faces')
         layerFaceDependency.appendNode('artifactId', 'image-layered-face')
-        layerFaceDependency.appendNode('version', '[1.0.1,2.0.0)')
+        layerFaceDependency.appendNode('version', '[2.0.0-alpha.1,3.0.0)')
       }
     }
   }
