--- a/rxcore/build.gradle
+++ b/rxcore/build.gradle
@@ -32,19 +32,19 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
-  implementation("io.blockv.faces:image-face:2.0.1")
+  implementation("io.blockv.faces:image-face:3.0.0-alpha.1")
     {
       exclude group: 'io.blockv.sdk'
     }
-  implementation("io.blockv.faces:image-progress-face:2.0.2")
+  implementation("io.blockv.faces:image-progress-face:3.0.0-alpha.1")
     {
       exclude group: 'io.blockv.sdk'
     }
-  implementation("io.blockv.faces:image-policy-face:1.0.2")
+  implementation("io.blockv.faces:image-policy-face:2.0.0-alpha.1")
     {
       exclude group: 'io.blockv.sdk'
     }
-  implementation("io.blockv.faces:image-layered-face:1.0.1")
+  implementation("io.blockv.faces:image-layered-face:2.0.0-alpha.1")
     {
       exclude group: 'io.blockv.sdk'
     }
@@ -59,7 +59,7 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'rxcore'
-def libraryVersion = '3.0.0-alpha.1'
+def libraryVersion = '3.0.0-alpha.2'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
