remove rx modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':core', ':rxcore', ':face', ':common', ':faceview', ':rxface'
+include ':app', ':core', ':face', ':common', ':faceview'
