--- a/common/build.gradle
+++ b/common/build.gradle
@@ -37,10 +37,10 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.github.cbismuth:junit-repeat-rule:1.1.2'
   testImplementation 'org.json:json:20140107'
+  testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
-  testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
 }
@@ -49,7 +49,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'common'
-def libraryVersion = '2.0.0-alpha.3'
+def libraryVersion = '2.0.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -87,6 +87,9 @@ publishing {
         rxandroid.appendNode('groupId', 'io.reactivex.rxjava2')
         rxandroid.appendNode('artifactId', 'rxandroid')
         rxandroid.appendNode('version', '[2.1.0,3.0.0)')
+        def ignoreVersions = asNode().appendNode('ignoreVersions')
+        ignoreVersions.appendNode('ignoreVersion', '.*-alpha(.*)',['type':'regex'])
+        ignoreVersions.appendNode('ignoreVersion', '.*-beta(.*)',['type':'regex'])
       }
     }
   }
