--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'faceview'
-def libraryVersion = '3.0.0-alpha.2'
+def libraryVersion = '3.0.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -59,7 +59,10 @@ publishing {
         def dependencyNode = dependenciesNode.appendNode('dependency')
         dependencyNode.appendNode('groupId', 'io.blockv.sdk')
         dependencyNode.appendNode('artifactId', 'common')
-        dependencyNode.appendNode('version', '[1.3.2,2.0.0)')
+        dependencyNode.appendNode('version', '[2.0.0,3.0.0)')
+        def ignoreVersions = asNode().appendNode('ignoreVersions')
+        ignoreVersions.appendNode('ignoreVersion', '.*-alpha(.*)', ['type': 'regex'])
+        ignoreVersions.appendNode('ignoreVersion', '.*-beta(.*)', ['type': 'regex'])
       }
     }
   }
