--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -61,8 +61,8 @@ publishing {
         dependencyNode.appendNode('artifactId', 'common')
         dependencyNode.appendNode('version', '[2.0.0,3.0.0)')
         def ignoreVersions = asNode().appendNode('ignoreVersions')
-        ignoreVersions.appendNode('ignoreVersion', '.*-alpha(.*)', ['type': 'regex'])
-        ignoreVersions.appendNode('ignoreVersion', '.*-beta(.*)', ['type': 'regex'])
+        ignoreVersions.appendNode('ignoreVersion', ['type': 'regex'], '.*-alpha(.*)')
+        ignoreVersions.appendNode('ignoreVersion', ['type': 'regex'], '.*-beta(.*)')
       }
     }
   }
