--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -60,9 +60,15 @@ publishing {
         dependencyNode.appendNode('groupId', 'io.blockv.sdk')
         dependencyNode.appendNode('artifactId', 'common')
         dependencyNode.appendNode('version', '[2.0.0,3.0.0)')
-        def ignoreVersions = asNode().appendNode('ignoreVersions')
-        ignoreVersions.appendNode('ignoreVersion', ['type': 'regex'], '.*-alpha(.*)')
-        ignoreVersions.appendNode('ignoreVersion', ['type': 'regex'], '.*-beta(.*)')
+        def versionPlugin = asNode()
+          .appendNode('build')
+          .appendNode('plugins')
+          .appendNode('plugin')
+        versionPlugin.appendNode('groupId', 'org.codehaus.mojo')
+        versionPlugin.appendNode('artifactId', 'versions-maven-plugin')
+        versionPlugin.appendNode('version', '2.1')
+        def configuration = versionPlugin.appendNode('configuration')
+        configuration.appendNode('rulesUri', 'https://raw.githubusercontent.com/BLOCKvIO/android-sdk/master/maven-rules.xml')
       }
     }
   }
