--- a/face/build.gradle
+++ b/face/build.gradle
@@ -27,6 +27,8 @@ android {
 
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation project(':common')
   implementation project(':faceview')
@@ -41,7 +43,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'face'
-def libraryVersion = '3.0.0-alpha.2'
+def libraryVersion = '3.0.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -61,31 +63,41 @@ publishing {
         def commonDependency = dependenciesNode.appendNode('dependency')
         commonDependency.appendNode('groupId', 'io.blockv.sdk')
         commonDependency.appendNode('artifactId', 'common')
-        commonDependency.appendNode('version', '[2.0.0-alpha.3,3.0.0)')
+        commonDependency.appendNode('version', '[2.0.0,3.0.0)')
         def coreDependency = dependenciesNode.appendNode('dependency')
         coreDependency.appendNode('groupId', 'io.blockv.sdk')
         coreDependency.appendNode('artifactId', 'core')
-        coreDependency.appendNode('version', '[3.0.0-alpha.3,4.0.0)')
+        coreDependency.appendNode('version', '[3.0.0,4.0.0)')
         def faceviewDependency = dependenciesNode.appendNode('dependency')
         faceviewDependency.appendNode('groupId', 'io.blockv.sdk')
         faceviewDependency.appendNode('artifactId', 'faceview')
-        faceviewDependency.appendNode('version', '[3.0.0-alpha.2,4.0.0)')
+        faceviewDependency.appendNode('version', '[3.0.0,4.0.0)')
         def imageFaceDependency = dependenciesNode.appendNode('dependency')
         imageFaceDependency.appendNode('groupId', 'io.blockv.faces')
         imageFaceDependency.appendNode('artifactId', 'image-face')
-        imageFaceDependency.appendNode('version', '[3.0.0-alpha.1,4.0.0)')
+        imageFaceDependency.appendNode('version', '[3.0.0,4.0.0)')
         def progressFaceDependency = dependenciesNode.appendNode('dependency')
         progressFaceDependency.appendNode('groupId', 'io.blockv.faces')
         progressFaceDependency.appendNode('artifactId', 'image-progress-face')
-        progressFaceDependency.appendNode('version', '[3.0.0-alpha.1,4.0.0)')
+        progressFaceDependency.appendNode('version', '[3.0.0,4.0.0)')
         def policyFaceDependency = dependenciesNode.appendNode('dependency')
         policyFaceDependency.appendNode('groupId', 'io.blockv.faces')
         policyFaceDependency.appendNode('artifactId', 'image-policy-face')
-        policyFaceDependency.appendNode('version', '[2.0.0-alpha.1,3.0.0)')
+        policyFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
         def layerFaceDependency = dependenciesNode.appendNode('dependency')
         layerFaceDependency.appendNode('groupId', 'io.blockv.faces')
         layerFaceDependency.appendNode('artifactId', 'image-layered-face')
-        layerFaceDependency.appendNode('version', '[2.0.0-alpha.1,3.0.0)')
+        layerFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        def versionPlugin = asNode()
+          .appendNode('build')
+          .appendNode('plugins')
+          .appendNode('plugin')
+        versionPlugin.appendNode('groupId', 'org.codehaus.mojo')
+        versionPlugin.appendNode('artifactId', 'versions-maven-plugin')
+        versionPlugin.appendNode('version', '2.1')
+        def configuration = versionPlugin.appendNode('configuration')
+        configuration.appendNode('rulesUri', 'https://raw.githubusercontent.com/BLOCKvIO/android-sdk/master/maven-rules.xml')
+
       }
     }
   }
