Update: modules to rx  (#119)
* remove callable

* add rx java 2 dependencies

* convert activity manager to use rx

* convert eventmanager to use rx

* convert usermanager to rx

* convert vatommanger to use rx

* update faceview module to use rx

* update resource manager to use rx

* add optional to utils

* update face manager to use rx

* remove rx modules

* update common dependencies

* update faceview dependencies

* fix pom ignore version

* fix pom file

* re add get access token function

* remove optional from rx types

* update blockv to compile with rx changes

* update dependencies

* remove rx modules from change log

* update readme

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,8 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.neovisionaries:nv-websocket-client:2.5'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -35,10 +37,10 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.github.cbismuth:junit-repeat-rule:1.1.2'
   testImplementation 'org.json:json:20140107'
+  testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
-  testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
 }
@@ -47,7 +49,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'common'
-def libraryVersion = '2.0.0-alpha.3'
+def libraryVersion = '2.0.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -77,7 +79,25 @@ publishing {
         websocket.appendNode('groupId', 'com.neovisionaries')
         websocket.appendNode('artifactId', 'nv-websocket-client')
         websocket.appendNode('version', '2.5')
+        def rxjava = dependenciesNode.appendNode('dependency')
+        rxjava.appendNode('groupId', 'io.reactivex.rxjava2')
+        rxjava.appendNode('artifactId', 'rxjava')
+        rxjava.appendNode('version', '[2.2.5,3.0.0)')
+        def rxandroid = dependenciesNode.appendNode('dependency')
+        rxandroid.appendNode('groupId', 'io.reactivex.rxjava2')
+        rxandroid.appendNode('artifactId', 'rxandroid')
+        rxandroid.appendNode('version', '[2.1.0,3.0.0)')
+        def versionPlugin = asNode()
+          .appendNode('build')
+          .appendNode('plugins')
+          .appendNode('plugin')
+        versionPlugin.appendNode('groupId', 'org.codehaus.mojo')
+        versionPlugin.appendNode('artifactId', 'versions-maven-plugin')
+        versionPlugin.appendNode('version', '2.1')
+        def configuration = versionPlugin.appendNode('configuration')
+        configuration.appendNode('rulesUri', 'https://raw.githubusercontent.com/BLOCKvIO/android-sdk/master/maven-rules.xml')
       }
+
     }
   }
   repositories {
