--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -27,6 +27,8 @@ android {
 
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation project(':common')
 
@@ -37,7 +39,7 @@ dependencies {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'faceview'
-def libraryVersion = '3.0.0-alpha.2'
+def libraryVersion = '3.0.0'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -57,7 +59,16 @@ publishing {
         def dependencyNode = dependenciesNode.appendNode('dependency')
         dependencyNode.appendNode('groupId', 'io.blockv.sdk')
         dependencyNode.appendNode('artifactId', 'common')
-        dependencyNode.appendNode('version', '[1.3.2,2.0.0)')
+        dependencyNode.appendNode('version', '[2.0.0,3.0.0)')
+        def versionPlugin = asNode()
+          .appendNode('build')
+          .appendNode('plugins')
+          .appendNode('plugin')
+        versionPlugin.appendNode('groupId', 'org.codehaus.mojo')
+        versionPlugin.appendNode('artifactId', 'versions-maven-plugin')
+        versionPlugin.appendNode('version', '2.1')
+        def configuration = versionPlugin.appendNode('configuration')
+        configuration.appendNode('rulesUri', 'https://raw.githubusercontent.com/BLOCKvIO/android-sdk/master/maven-rules.xml')
       }
     }
   }
