--- a/face/build.gradle
+++ b/face/build.gradle
@@ -43,7 +43,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'face'
-def libraryVersion = '3.0.0'
+def libraryVersion = '3.0.1-alpha'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
