--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'faceview'
-def libraryVersion = '3.0.0'
+def libraryVersion = '3.0.1-alpha'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
