--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,7 +49,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk'
 def libraryArtifactId = 'common'
-def libraryVersion = '2.0.1-alpha'
+def libraryVersion = '2.0.1'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
