--- a/face/build.gradle
+++ b/face/build.gradle
@@ -88,6 +88,10 @@ publishing {
         layerFaceDependency.appendNode('groupId', 'io.blockv.faces')
         layerFaceDependency.appendNode('artifactId', 'image-layered-face')
         layerFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        def webFaceDependency = dependenciesNode.appendNode('dependency')
+        webFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        webFaceDependency.appendNode('artifactId', 'web-face')
+        webFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
         def versionPlugin = asNode()
           .appendNode('build')
           .appendNode('plugins')
